# transfer-db-cli

./: .gitignore  CLAUDE.md  README.md  config.example.yaml  config.yaml  pyproject.toml
src/mysql_transfer/: __init__.py  cli.py  config.py  connection.py  data.py  progress.py  schema.py  transfer.py
